# oregon-trail-deluxe-decompiler

./: .gitignore  .pre-commit-config.yaml  GITHUB_PAGES_SETUP.md  README.md  XMI_format.md  dosbox-x-16color.conf  dosbox-x.conf  gallery.html  index.html  main.py  pyproject.toml
decompiled/: call_graph_report.txt  code.c  header.txt  pseudocode.c  resource_report.txt  state_report.txt  strings.txt  structure_report.txt
decompiled_advanced/: disassembly.asm  pseudocode.c
decompiled_c_code/: code.c
decompiled_oregon_trail/: pseudocode.c
decompiled_test/: code.c
docs/: _config.yml  ctr_format_analysis.md  executable_analysis.md  gallery.html  index.html  index.md  oregon-trail-theme.css
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
raw_extracted/: AXLE.SND  BADEXP.CTR  BADFNAME.CTR  BADLOAD.CTR  BADSAVE.CTR  BANKS.ANI  BANKS.PC4  BANKS.PC8  BANNER.PC4  BANNER.PC8  BEAR.16   BEAR.256  BEEP.SND  BIG.GFT  BUFFALO.16   BUFFALO.256  CLIFFS.ANI  CLIFFS.PC4  CLIFFS.PC8  COLOR16.PCX  CONFIG.CTR  CONFIG1.CTR  CONTBTN.PC4  (+284 more)
rust-trail/: .gitignore  Cargo.toml  README.md  REWRITE_PLAN.md
rust-trail/assets/: README.md
rust-trail/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
rust-trail/src/: game.rs  main.rs
rust-trail/src/engine/: asset_loader.rs  mod.rs
rust-trail/src/game_logic/: inventory.rs  mod.rs  player.rs
rust-trail/src/scenes/: button.rs  mod.rs  title.rs  title_screen.rs
rust-trail/src/utils/: mod.rs
(+229 files in other folders)
